Add Health Check support

--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -15,3 +15,13 @@ plugins:
       - generate_unbound_methods=true
   - local: protoc-gen-openapiv2
     out: gen/go
+# managed:
+#   enabled: true
+#   override:
+#     - file_option: go_package_prefix
+#       value: github.com/bufbuild/buf-examples/protovalidate/quickstart-go/start/gen
+# Don't modify any file option or field option for protovalidate. Without
+# this, generated Go will fail to compile.
+# disable:
+#   - file_option: go_package
+#     module: buf.build/bufbuild/protovalidate
