--- a/buf.yaml
+++ b/buf.yaml
@@ -1,15 +1,16 @@
 version: v2
 modules:
   - path: proto
-    name: buf.build/myuser/myrepo
+    # name: buf.build/myuser/myrepo
 deps:
   - buf.build/googleapis/googleapis
-  - buf.build/grpc-ecosystem/grpc-gateway
+  # - buf.build/grpc-ecosystem/grpc-gateway
+  - buf.build/bufbuild/protovalidate
 lint:
   except:
     - FIELD_NOT_REQUIRED
     - PACKAGE_NO_IMPORT_CYCLE
-  disallow_comment_ignores: true
+  # disallow_comment_ignores: true
 breaking:
   except:
     - EXTENSION_NO_DELETE
