Change module name to github.com/ClearMotion/microservice-base-go

--- a/buf.yaml
+++ b/buf.yaml
@@ -1,7 +1,7 @@
 version: v2
 modules:
   - path: proto
-    # name: buf.build/myuser/myrepo
+    # name: buf.build/ClearMotion/microservice-base-go
 deps:
   - buf.build/googleapis/googleapis
   # - buf.build/grpc-ecosystem/grpc-gateway
